--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
-<html>
-    <head>
-        <title>Villa Imah Caang</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Villa Imah Caang</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
        <!-- NAVIGATION BAR -->
-        <div class="container-navbar">
-            <ul class="ul-navbar">
-                <li class="li-navbar">HOME</li>
-                <li class="li-navbar">ABOUT ME</li>
-                <li class="li-navbar">CONTACT ME</li>
-            </ul>
+    <header>
+        <div class="jumbotron">
         </div>
+       <nav>
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT ME</a></li>
+          <li><a href="#">CONTACT ME</a></li>
+        </ul>
+      </nav>
+    </header>
        <!-- NAVIGATION BAR SELESAI -->
 
        <!-- CONTENT 1 -->
+       <br>
         <div>
            <img src="imah.JPG" width="30%" height="30%"/>
         </div>
@@ -27,4 +37,8 @@
         </div>
        <!-- FOOTER END -->
     </body>
+</html>
+
+    
+</body>
 </html>
