--- a/index.html
+++ b/index.html
@@ -1,44 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Villa Imah Caang</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-       <!-- NAVIGATION BAR -->
-    <header>
-        <div class="jumbotron">
-        </div>
-       <nav>
-        <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT ME</a></li>
-          <li><a href="#">CONTACT ME</a></li>
-        </ul>
-      </nav>
-    </header>
-       <!-- NAVIGATION BAR SELESAI -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bootstrap 5 - Transparent Navbar</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <style>
+      .banner-image {
+        background-image: url('img/imah.jpg');
+        background-size: cover;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Navbar  -->
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+            <img src="img/logo.JPG" alt="Avatar Logo" style="width: 100px;" class="rounded-pill"> 
+            </a>
 
-       <!-- CONTENT 1 -->
-       <br>
-        <div>
-           <img src="imah.JPG" width="30%" height="30%"/>
-        </div>
-       
-       <!-- CONTENT END -->
+            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="mx-auto"></div>
+            <a class="navbar-brand" href="#">Villa Imah Caang</a>
+            <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+            >
+            <span class="navbar-toggler-icon"></span>
+            </button>
 
-       <!-- FOOTER -->
-        <div>
-            <h1>Apajalah h1</h1></h1>
+            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="mx-auto"></div>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                <a class="nav-link text-white" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link text-white" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link text-white" href="#">Blog</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link text-white" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link text-white" href="#">Contact</a>
+                </li>
+            </ul>
+            </div>
         </div>
-       <!-- FOOTER END -->
-    </body>
-</html>
+        </nav>
+        <!-- Navbar end -->
+    <!-- Banner Image  -->
+    <div
+      class="banner-image w-100 vh-100 d-flex justify-content-center align-items-center"
+    >
+    <div class="container-fluid p-5 bg-Transparent text-white text-left">
+        <h1 class="text-white">Villa Imah Caang</h1>
+      </div>
+    </div>
 
-    
-</body>
+    <!-- Main Content Area -->
+    <div class="container my-5 d-grid gap-5">
+      <div class="p-5 border">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus veniam ipsa earum quibusdam, atque ipsum error maiores
+          natus iusto fugit id saepe neque rerum magni laudantium accusantium
+          dolorem numquam quasi.
+        </p>
+      </div>
+      <div class="p-5 border">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus veniam ipsa earum quibusdam, atque ipsum error maiores
+          natus iusto fugit id saepe neque rerum magni laudantium accusantium
+          dolorem numquam quasi.
+        </p>
+      </div>
+      <div class="p-5 border">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus veniam ipsa earum quibusdam, atque ipsum error maiores
+          natus iusto fugit id saepe neque rerum magni laudantium accusantium
+          dolorem numquam quasi.
+        </p>
+      </div>
+      <div class="p-5 border">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus veniam ipsa earum quibusdam, atque ipsum error maiores
+          natus iusto fugit id saepe neque rerum magni laudantium accusantium
+          dolorem numquam quasi.
+        </p>
+      </div>
+      <div class="p-5 border">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus veniam ipsa earum quibusdam, atque ipsum error maiores
+          natus iusto fugit id saepe neque rerum magni laudantium accusantium
+          dolorem numquam quasi. df
+        </p>
+      </div>
+    </div>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript">
+      var nav = document.querySelector('nav');
+
+      window.addEventListener('scroll', function () {
+        if (window.pageYOffset > 100) {
+          nav.classList.add('bg-dark', 'shadow');
+        } else {
+          nav.classList.remove('bg-dark', 'shadow');
+        }
+      });
+    </script>
+  </body>
 </html>
